test/errors/delete_constant.correct
error: delete_constant.li:3:9: 'y' is not defined
│ println(y);
│         ~
│         ^
